# DroneNavigator-2

./: .replit  FirstAlgorithm  README.md  advanced_scenarios.py  audio_demo.py  audio_system.py  compatible_simulation.py  config.py  direct_simulation.py  enhanced_simulation.py  geo_data_manager.py  gis_utils.py  gui.py  headless_simulation.py  interactive_simulation.py  main.py  mpl_canvas.py  pyproject.toml  quick_simulation.py  realistic_simulation.py  run_simulation.py  simple_web.py  simulation_core.py  visualize_results.py  web_enhanced.py  web_fixed.py  web_visualization.py
attached_assets/: Pasted--NATO-Level-Military-Drone-Simulation-Full-Feature-Specification-1-GENERAL-SYSTEM-STRUCTURE-1745213166022.txt  Pasted--main-app-py-Ideally-split-into-multiple-files-main-gui-py-simulation-core-py-gis-1745213119697.txt
templates/: index.html
